--- a/PreProcessing.ipynb
+++ b/PreProcessing.ipynb
@@ -12,13 +12,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "lOtWeaVBOFaM",
-        "outputId": "d449d5c7-43d8-4417-fdf8-81e096065f08"
+        "outputId": "57e87e80-cebc-4d18-9628-cec0918c6550"
       },
       "outputs": [
         {
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "DmqCxou6wHjo"
       },
@@ -179,13 +179,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "8hi-qSBoMkQO",
-        "outputId": "fd5ea087-d6da-41e8-a0ac-a6ec278b1d6d"
+        "outputId": "d8eb2db3-d6f7-4f20-830f-b43ed6cf3817"
       },
       "outputs": [
         {
@@ -194,7 +194,7 @@
           "text": [
             "Collecting pyvi\n",
             "  Downloading pyvi-0.1.1-py2.py3-none-any.whl (8.5 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8.5/8.5 MB\u001b[0m \u001b[31m41.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m8.5/8.5 MB\u001b[0m \u001b[31m39.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: scikit-learn in /usr/local/lib/python3.10/dist-packages (from pyvi) (1.2.2)\n",
             "Collecting sklearn-crfsuite (from pyvi)\n",
             "  Downloading sklearn_crfsuite-0.5.0-py2.py3-none-any.whl (10 kB)\n",
@@ -204,7 +204,7 @@
             "Requirement already satisfied: threadpoolctl>=2.0.0 in /usr/local/lib/python3.10/dist-packages (from scikit-learn->pyvi) (3.5.0)\n",
             "Collecting python-crfsuite>=0.9.7 (from sklearn-crfsuite->pyvi)\n",
             "  Downloading python_crfsuite-0.9.10-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl (1.1 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.1/1.1 MB\u001b[0m \u001b[31m36.5 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.1/1.1 MB\u001b[0m \u001b[31m40.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
             "\u001b[?25hRequirement already satisfied: tabulate>=0.4.2 in /usr/local/lib/python3.10/dist-packages (from sklearn-crfsuite->pyvi) (0.9.0)\n",
             "Requirement already satisfied: tqdm>=2.0 in /usr/local/lib/python3.10/dist-packages (from sklearn-crfsuite->pyvi) (4.66.4)\n",
             "Installing collected packages: python-crfsuite, sklearn-crfsuite, pyvi\n",
@@ -218,7 +218,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
         "id": "_LFmA7U0M5Wz"
       },
@@ -254,7 +254,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "id": "tqNtn8j6N78O"
       },
@@ -270,7 +270,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "id": "31obE31bOdpl"
       },
@@ -304,7 +304,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "id": "tQJJl-aC6iPq"
       },
@@ -344,32 +344,34 @@
       "metadata": {
         "id": "X_O_VnfNdIZ4"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "path_input = '/content/gdrive/MyDrive/Thesis/dataset/Root/data_2_nam.csv'\n",
-        "keep_data_multi_label = False\n",
-        "threshold_cosine_similar = 0.9\n",
-        "is_remove_np = True"
+        "keep_data_multi_label = True\n",
+        "is_remove_np = True\n",
+        "is_k_means = True\n",
+        "k = 6\n",
+        "count_data = 2000"
       ],
       "metadata": {
         "id": "1FI2H6cxcYwp"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "PijFiJSS6krX",
-        "outputId": "66f38a14-1079-4884-f365-f7de4d7019f5"
+        "outputId": "10028fbd-4c83-4405-b520-3590a4e8d95a"
       },
       "outputs": [
         {
@@ -404,18 +406,18 @@
       "metadata": {
         "id": "1fOJhMEQCrkt"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 28,
       "metadata": {
         "id": "BskZwdXh9CGc",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "882c53a4-3a32-42cd-afeb-653ff806baf5"
+        "outputId": "e82af6c3-274d-4ff1-86c8-f547f06ae4d4"
       },
       "outputs": [
         {
@@ -423,15 +425,15 @@
           "name": "stdout",
           "text": [
             "<class 'pandas.core.frame.DataFrame'>\n",
-            "Index: 20912 entries, 0 to 24617\n",
+            "RangeIndex: 24618 entries, 0 to 24617\n",
             "Data columns (total 3 columns):\n",
             " #   Column          Non-Null Count  Dtype \n",
             "---  ------          --------------  ----- \n",
-            " 0   Trích yếu       20912 non-null  object\n",
-            " 1   ID phòng xử lý  20912 non-null  int64 \n",
-            " 2   input           20912 non-null  object\n",
+            " 0   Trích yếu       24618 non-null  object\n",
+            " 1   ID phòng xử lý  24618 non-null  int64 \n",
+            " 2   input           24618 non-null  object\n",
             "dtypes: int64(1), object(2)\n",
-            "memory usage: 653.5+ KB\n"
+            "memory usage: 577.1+ KB\n"
           ]
         }
       ],
@@ -449,26 +451,154 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "lfFVEMBWFk1E",
-        "outputId": "79273c9b-f8c2-4d87-a8f2-f097a22a45fd"
+        "outputId": "ee51533b-49b8-485c-e53e-6daacfcf7573"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
               "ID phòng xử lý\n",
-              "2733546    8376\n",
-              "2733552    8050\n",
-              "2733540    2053\n",
-              "2733570    1084\n",
-              "2733522     960\n",
-              "2733534     389\n",
+              "2733546    9396\n",
+              "2733552    9068\n",
+              "2733540    2601\n",
+              "2733570    1593\n",
+              "2733522    1345\n",
+              "2733534     615\n",
               "Name: count, dtype: int64"
             ]
           },
           "metadata": {},
-          "execution_count": 58
+          "execution_count": 29
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if is_k_means:\n",
+        "  from sklearn.cluster import KMeans\n",
+        "  from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "\n",
+        "  final_df = pd.DataFrame()\n",
+        "\n",
+        "  for label in df['ID phòng xử lý'].unique():\n",
+        "    subset = df[df['ID phòng xử lý'] == label]\n",
+        "\n",
+        "    if subset.shape[0] < count_data:\n",
+        "        final_df = pd.concat([final_df, subset])\n",
+        "        continue\n",
+        "\n",
+        "    ratio = count_data / subset.shape[0]\n",
+        "\n",
+        "    tfidf_vectorizer = TfidfVectorizer()\n",
+        "    X_text = tfidf_vectorizer.fit_transform(subset['input'])\n",
+        "    kmeans = KMeans(n_clusters=k, n_init=10, random_state=42)\n",
+        "    kmeans.fit(X_text)\n",
+        "    labels = kmeans.labels_\n",
+        "    subset['Cluster'] = labels\n",
+        "\n",
+        "    for cluster in range(k):\n",
+        "        cluster_data = subset[subset['Cluster'] == cluster]\n",
+        "        n_samples = int(ratio * cluster_data.shape[0])\n",
+        "        if n_samples > 0:\n",
+        "            sampled_data = cluster_data.sample(n=n_samples, random_state=42)\n",
+        "            final_df = pd.concat([final_df, sampled_data])\n",
+        "        else:\n",
+        "            final_df = pd.concat([final_df, cluster_data])\n",
+        "\n",
+        "final_df.drop(columns = ['Cluster'], inplace = True)\n",
+        "final_df.info()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "K8HLjbPpkX1E",
+        "outputId": "7aeee4fa-f401-42ab-ae96-f8aac1b685bd"
+      },
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-30-dabe7913eada>:21: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  subset['Cluster'] = labels\n",
+            "<ipython-input-30-dabe7913eada>:21: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  subset['Cluster'] = labels\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "<class 'pandas.core.frame.DataFrame'>\n",
+            "Index: 9544 entries, 0 to 24617\n",
+            "Data columns (total 3 columns):\n",
+            " #   Column          Non-Null Count  Dtype \n",
+            "---  ------          --------------  ----- \n",
+            " 0   Trích yếu       9544 non-null   object\n",
+            " 1   ID phòng xử lý  9544 non-null   int64 \n",
+            " 2   input           9544 non-null   object\n",
+            "dtypes: int64(1), object(2)\n",
+            "memory usage: 298.2+ KB\n"
+          ]
+        },
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "<ipython-input-30-dabe7913eada>:21: SettingWithCopyWarning: \n",
+            "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+            "Try using .loc[row_indexer,col_indexer] = value instead\n",
+            "\n",
+            "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+            "  subset['Cluster'] = labels\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "df = final_df\n",
+        "df['ID phòng xử lý'].value_counts()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IQXiWQqHqVrk",
+        "outputId": "203b38bb-1b6c-4f88-a5b4-eaeb6027c348"
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "ID phòng xử lý\n",
+              "2733540    1997\n",
+              "2733546    1997\n",
+              "2733552    1997\n",
+              "2733570    1593\n",
+              "2733522    1345\n",
+              "2733534     615\n",
+              "Name: count, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 31
         }
       ]
     },
@@ -476,7 +606,7 @@
       "cell_type": "code",
       "source": [
         "path_output = '/content/gdrive/MyDrive/Thesis/dataset/PreprocessedData'\n",
-        "name_file_output = 'data_2_nam_not_keep_multi_label_and_remove_np.csv'\n",
+        "name_file_output = 'data_2_nam_keep_multi_label_and_remove_np_and_kmean_2000.csv'\n",
         "import os\n",
         "if not os.path.exists(path_output):\n",
         "    os.makedirs(path_output)\n",
@@ -487,7 +617,7 @@
       "metadata": {
         "id": "_9KthzHDD7J8"
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": []
     }
   ],
